<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_nearYou">

    <fragment
        android:id="@+id/navigation_nearYou"
        android:name="com.gebeya.maqoya.framework.screens.home.nearYou.HomeFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.gebeya.maqoya.framework.screens.home.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_myChild"
        android:name="com.gebeya.maqoya.framework.screens.home.child.ChildFragment"
        android:label="@string/title_child"
        tools:layout="@layout/fragment_child" />



</navigation>