<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/office_location">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/almost_done"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:fontFamily="Mali" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/office_only"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:fontFamily="Mali"
        android:layout_marginTop="35dp"/>

    <EditText
        android:id="@+id/office_editText"
        style="@style/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45.96dp"
        android:layout_marginRight="45.96dp"
        android:layout_marginTop="40dp"
        android:hint="@string/office_location"
        android:inputType="textPersonName"
        android:autofillHints="userName" />






    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginTop="40dp"
        style="@style/button.start" />


</LinearLayout>